daemon: Do not compare const and non-const QMap iterator

This is supposed to be valid C++ 20 [1], and yet it fails comparison.

[1]: https://isocpp.org/files/papers/N4860.pdf,
     § 22.2.1 [container.requirements.general] p7

BUG: 493519